# daml

./: BUILD  LATEST  WORKSPACE  azure-cron.yml  bazel-haskell-deps.bzl  stack-snapshot.yaml
analytics/: BUILD.bazel
analytics/src/: Main.hs
bazel_tools/: haskell-ghc-8.8.3-bindist.patch
ci/cron/: BUILD.bazel
ci/cron/src/: Main.hs
compiler/daml-lf-evaluator/: BUILD.bazel
compiler/daml-lf-evaluator/exec/DA/Daml/LF/Evaluator/: Main.hs
compiler/daml-lf-evaluator/src/DA/Daml/LF/: Evaluator.hs
compiler/daml-lf-evaluator/src/DA/Daml/LF/Evaluator/: Eval.hs  Exp.hs  Norm.hs  Pretty.hs  Simp.hs  Value.hs
compiler/daml-lf-evaluator/test/DA/Daml/LF/Evaluator/: Tests.hs
compiler/daml-lf-evaluator/test/daml/: Examples.daml
compiler/daml-lf-tools/src/DA/Daml/LF/: Simplifier.hs
compiler/damlc/: BUILD.bazel
compiler/damlc/daml-compiler/src/DA/Daml/Compiler/: DataDependencies.hs  Repl.hs
compiler/damlc/daml-ide-core/src/Development/IDE/Core/Rules/: Daml.hs
compiler/damlc/daml-lf-conversion/src/DA/Daml/: LFConversion.hs
compiler/damlc/daml-opts/daml-opts/DA/Daml/: Options.hs
compiler/damlc/daml-preprocessor/src/DA/Daml/Preprocessor/: Records.hs
compiler/damlc/lib/DA/Cli/: Damlc.hs
compiler/damlc/lib/DA/Cli/Damlc/: BuildInfo.hs
compiler/damlc/tests/: BUILD.bazel
compiler/damlc/tests/src/DA/Test/: DamlDocTestIntegration.hs
compiler/haskell-ide-core/: BUILD.bazel
compiler/haskell-ide-core/src/Development/IDE/State/: FileStore.hs  RuleTypes.hs  Service.hs  Shake.hs
compiler/haskell-ide-core/src/Development/IDE/Types/: Diagnostics.hs
daml-assistant/integration-tests/src/DA/Daml/Assistant/: IntegrationTests.hs
daml-foundations/daml-ghc/src/DA/Daml/GHC/Damldoc/: HaddockParse.hs
daml-foundations/daml-ghc/src/DA/Test/: GHC.hs
daml-foundations/daml-ghc/src/Development/IDE/State/API/: Testing.hs
daml-foundations/daml-ghc/src/Development/IDE/State/Rules/: Daml.hs
daml-foundations/daml-tools/da-hs-daml-cli/DA/Cli/: Damlc.hs  Output.hs
daml-foundations/daml-tools/da-hs-daml-cli/DA/Cli/Damlc/: Test.hs
docs/source/support/: release-notes.rst
infra/macos/2-vagrant-files/: init.sh
language-support/hs/bindings/src/DA/Ledger/: LedgerService.hs
language-support/ts/codegen/tests/daml/: Main.daml  daml.yaml
language-support/ts/codegen/tests/ts/daml-json-types/src/: index.ts
language-support/ts/daml-ledger/: index.test.ts  index.ts
ledger/api-server-damlonx/reference-v2/: BUILD.bazel
ledger/ledger-api-client/: BUILD.bazel
ledger/participant-state-index/: BUILD.bazel
libs-haskell/da-hs-base/src/DA/Service/Logger/Impl/: GCP.hs
nix/: ghc.nix
nix/overrides/: ghc-8.8.3.nix
pipeline/samples/bazel/haskell/c2hs/: BUILD
pipeline/samples/bazel/haskell/c2hs/cbits/: somelib.h
pipeline/samples/bazel/haskell/c2hs/src/Foo/: Foo.chs
release/src/: Main.hs  Options.hs
(+73 files in other folders)
